--- a/AndroidClient/app/build.gradle
+++ b/AndroidClient/app/build.gradle
@@ -35,8 +35,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
-    implementation 'com.google.android.material:material:1.1.0-alpha07'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta03'
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
 
     def lifecycle_version = "2.0.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
@@ -45,4 +45,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-RC'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.mikhaellopez:circularimageview:4.0.2'
 }
