--- a/AndroidClient/app/build.gradle
+++ b/AndroidClient/app/build.gradle
@@ -46,4 +46,6 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-RC'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.mikhaellopez:circularimageview:4.0.2'
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.google.android:flexbox:1.1.0'
 }
