--- a/android/pubspec.yaml
+++ b/android/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   permission_handler: ^3.2.0
   fluttertoast: ^3.1.0
   after_layout: ^1.0.7
+  shared_preferences: ^0.5.3+4
+  dio: ^2.1.16
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +48,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/login.svg
+    - assets/logo.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -60,10 +62,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
