--- a/android/pubspec.yaml
+++ b/android/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   shared_preferences: ^0.5.3+4
   dio: ^2.1.16
   validators: ^2.0.0
+  crypto: ^2.1.2
+  cached_network_image: ^1.1.1
 
 dev_dependencies:
   flutter_test:
