--- a/android/pubspec.yaml
+++ b/android/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   validators: ^2.0.0
   crypto: ^2.1.2
   cached_network_image: ^1.1.1
+  pull_to_refresh: ^1.5.6
 
 dev_dependencies:
   flutter_test:
